test/spec_vectors/table_grow/fail/module_14.wat
(module (table $t 1 externref) (func $type-result-i32-vs-f32 (result f32) (table.grow $t (ref.null extern) (i32.const 0))))